@@ -5,34 +5,37 @@
 Pareto density estimation (PDE) [Ultsch, 2005] used for a scatter density plot. 
 }
 \usage{
-PDEscatter(x, y, na.rm = FALSE, PlotIt=TRUE,paretoRadius = 0, sampleSize =
+PDEscatter(x,y,SampleSize,
 
-                 round(sqrt(5e+08), -3), NrOfContourLines = 20, Plotter
-				 
-                 = "native", DrawTopView = T, xlab = "X", ylab = "Y",
-				 
-                 main = "PDEscatter", xlim, ylim, Legendlab_ggplot =
-				 
-                 "value")
+na.rm=FALSE,PlotIt=TRUE,ParetoRadius,sampleParetoRadius,
+                              
+NrOfContourLines=20,Plotter='native', DrawTopView = TRUE,
+                              
+xlab="X", ylab="Y", main="PDEscatter",
+                              
+xlim, ylim, Legendlab_ggplot="value")
 }
 \details{
-The \code{PDEscatter} function generates the density of the xy data as a z coordinate. Afterwards xyz will be plotted either as a contour plot or a 3d plot. 
-This function plots the PDE on top of a scatterplot. Variances of x and y should not differ by extreme numbers, otherwise calculate the percentiles on both first.
+The \code{PDEscatter} function generates the density of the xy data as a z coordinate. Afterwards xyz will be plotted either as a contour plot or a 3d plot. It assumens that the cases of x and y are mapped to each other meaning that a \code{cbind(x,y)} operation is allowed.
+This function plots the PDE on top of a scatterplot. Variances of x and y should not differ by extreme numbers, otherwise calculate the percentiles on both first. If \code{DrawTopView=FALSE} only the plotly option is currently available. If another option is chosen, the method switches automatically there.
+
 The method was succesfully used in [Thrun, 2018; Thrun/Ultsch 2018].
 
-\code{PlotIt=FALSE} is usefull if one likes to perform adjustements like axis scaling prior to plotting with \pkg{ggplot2} or  \pkg{plotly}. In the case of \code{native} the handle return null because the basic R functon \code{plot}()is used
+\code{PlotIt=FALSE} is usefull if one likes to perform adjustements like axis scaling prior to plotting with \pkg{ggplot2} or  \pkg{plotly}. In the case of "\code{native}"" the handle returns \code{NULL} because the basic R functon \code{plot}() is used
 }
 \arguments{
   \item{x}{Numeric vector, first feature (for x axis values)}
   \item{y}{Numeric vector, second feature (for y axis values)}
+  \item{SampleSize}{Numeric, positiv scalar, maximum size of the sample used for calculation. High values increase runtime significantly. The default is that no sample is drawn}
   \item{na.rm}{Function may not work with non finite values. If these cases should be automatically removed, set parameter TRUE}
-  \item{paretoRadius}{Numeric, the Pareto Radius. If omitted (or 0), calculate by paretoRad.}
+  \item{ParetoRadius}{Numeric, positiv scalar, the Pareto Radius. If omitted (or 0), calculate by paretoRad.}
+   \item{sampleParetoRadius}{Numeric, positiv scalar, maximum size of the sample used for estimation of "kernel", should be significantly lower than SampleSize because requires distance computations which is memory expensive}
     \item{PlotIt}{TRUE: plots with function call
     FALSE: Does not plot, plotting can be done using the list element \code{Handle}
     }
-  \item{sampleSize}{Numeric, maximum size of the sample used for calculation. High values increase runtime significantly.}
+
   \item{NrOfContourLines}{Numeric, number of contour lines to be drawn. 20 by default.}
-  \item{Plotter}{String, name of the plotting backend to use. Possible values are: "native", "ggplot", "plotly"}
+  \item{Plotter}{String, name of the plotting backend to use. Possible values are: "\code{native}", "\code{ggplot}", "\code{plotly}"}
   \item{DrawTopView}{Boolean, True means contur is drawn, otherwise a 3D plot is drawn. Default: TRUE}
     \item{xlab}{String, title of the x axis. Default: "X",   see \code{plot()} function}
   \item{ylab}{String, title of the y axis. Default: "Y",   see \code{plot()} function}
@@ -48,7 +51,7 @@ The method was succesfully used in [Thrun, 2018; Thrun/Ultsch 2018].
     \item{Legendlab_ggplot}{String, in case of \code{Plotter="ggplot"} label for the legend. Default: "value"}
 }
 \note{
-If \code{DrawTopView=FALSE} only the plotly option is currently available. If another option is chosen, the method switches automatically there.
+MT contributed with several adjustments
 }
 
 \value{
@@ -90,7 +93,7 @@ ylab ='MTY in EUR' ,main='Pareto Density Estimation indicates Bimodality' )
 
 \author{Felix Pape}
 \keyword{scatter}
-\keyword{scatter plot}
-\keyword{scatter density plot}
+\concept{scatter plot}
+\concept{scatter density plot}
 \keyword{PDE}
-\keyword{Density Estimation}
+\concept{Density Estimation}
